--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
+    "react-slick": "^0.29.0",
     "react-spotify-web-playback": "^0.10.0",
     "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
@@ -45,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^1.4.1"
   }
 }
